--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "pyside6>=6.10.1",
-    "pywin32>=311",
-    "pyyaml>=6.0.3",
+    "pyside6==6.10.1",
+    "pywin32==311",
+    "pyyaml==6.0.3",
 ]
